app/assets/stylesheets/gs/spacing.css.scss
/*@charset "UTF-8";*/
/* CSS Document */

/*
Theme Name: Spacing
Description: Specific styles for the GreatSchools website
Author: Randall Cox
Version: 1.0
.
General comments:

 * Spacing classes
 * Should be used to modify the default spacing between objects (not between nodes of the same object)
 * Please use judiciously.
 * You want to be using defaults most of the time, these are exceptions!

 * Spacing read me
 * p,m = padding,margin
 * a,t,r,b,l,h,v = all,top,right,bottom,left,horizontal,vertical
 * s,m,l,n = small(5px),medium(10px),large(20px),none(0px)

.
*/

body { padding-top: 50px }
.link-down-compensate { padding-top: 50px; margin-top: -50px; }

.ptn,.pvn,.pan{padding-top: 0}
.pts,.pvs,.pas{padding-top:5px}
.ptm,.pvm,.pam{padding-top:10px}
.ptl,.pvl,.pal{padding-top:20px}
.prn,.phn,.pan{padding-right: 0}
.prs,.phs,.pas{padding-right:5px}
.prm,.phm,.pam{padding-right:10px}
.prl,.phl,.pal{padding-right:20px}
.pbn,.pvn,.pan{padding-bottom: 0}
.pbs,.pvs,.pas{padding-bottom:5px}
.pbm,.pvm,.pam{padding-bottom:10px}
.pbl,.pvl,.pal{padding-bottom:20px}
.pln,.phn,.pan{padding-left: 0}
.pls,.phs,.pas{padding-left:5px}
.plm,.phm,.pam{padding-left:10px}
.pll,.phl,.pal{padding-left:20px}
.plxl,.phxl,.paxl{padding-left:40px}
.pbxl,.pvxl,.paxl{padding-bottom:40px}
.prxl,.phxl,.paxl{padding-right:40px}
.ptxl,.pvxl,.paxl{padding-top:40px}
.mtn,.mvn,.man{margin-top: 0}
.mts,.mvs,.mas{margin-top:5px}
.mtm,.mvm,.mam{margin-top:10px}
.mtl,.mvl,.mal{margin-top:20px}
.mrn,.mhn,.man{margin-right: 0}
.mrs,.mhs,.mas{margin-right:5px}
.mrm,.mhm,.mam{margin-right:10px}
.mrl,.mhl,.mal{margin-right:20px}
.mbn,.mvn,.man{margin-bottom: 0}
.mbs,.mvs,.mas{margin-bottom:5px}
.mbm,.mvm,.mam{margin-bottom:10px}
.mbl,.mvl,.mal{margin-bottom:20px}
.mln,.mhn,.man{margin-left: 0}
.mls,.mhs,.mas{margin-left:5px}
.mlm,.mhm,.mam{margin-left:10px}
.mll,.mhl,.mal{margin-left:20px}
.mlxl,.mhxl,.maxl{margin-left:40px}
.mbxl,.mvxl,.maxl{margin-bottom:40px}
.mrxl,.mhxl,.maxl{margin-right:40px}
.mtxl,.mvxl,.maxl{margin-top:40px}



.pt1 {padding-top:1px}
.pt2 {padding-top:2px}
.pt3 {padding-top:3px}
.pt4 {padding-top:4px}
.pt6 {padding-top:6px}
.pt7 {padding-top:7px}
.pt8 {padding-top:8px}
.pt9 {padding-top:9px}

.pb1 {padding-top:1px}
.pb2 {padding-top:2px}

.pb35 {padding-bottom:  35px}
//use in media query for less that 480
.pl35 {padding-left: 35px}
.pl25 {padding-left: 25px}
.pt-1 { padding-top: 1% }

.mt3 {margin-top: 3px;}

.mv6 {margin-top: 6px;
      margin-bottom: 6px;
}

//default module padding
.dvp {padding-top: 60px; padding-bottom: 60px}

.mha { margin-right: auto; margin-left: auto; }

.bottom { margin-bottom: 0; padding-bottom: 0; }

.fl { float: left; }
.fr { float: right; }
.fn { float: none; }

.lg-pr-sm-pl {
  float: right;
}

@media only screen and (max-width: 768px) {
  .lg-pr-sm-pl {
    float: left;
    clear: left;
  }
}

@media only screen and (min-width: 480px) {
  .lg-fr {
    float: right;
  }
}

/* the clearfloat class should be placed on a <div> or <br> element and */
/* should be the final element before the close of a container */
/* that should fully contain a float */
.clearfloat { clear: both; height: 0; font-size: 1px; line-height: 0; }

/* height shims */
.shim-1 { clear: both; height: 1px; font-size: 1px; line-height: 1px; }
.shim-2 { clear: both; height: 2px; font-size: 1px; line-height: 2px; }
.shim-5 { clear: both; height: 5px; font-size: 1px; line-height: 5px; }
.shim-10 { clear: both; height: 10px; font-size: 1px; line-height: 10px; }
.shim-20 { clear: both; height: 20px; font-size: 1px; line-height: 20px; }
.shim-25 { clear: both; height: 25px; font-size: 1px; line-height: 25px; }
.shim-50 { clear: both; height: 50px; font-size: 1px; line-height: 50px; }
.shim-100 { clear: both; height: 100px; font-size: 1px; line-height: 100px; }

.db { display: block; }
.di { display: inline; }
.dib { display: inline-block; }
.dn { display: none; }

.tal { text-align: left; }
.tac { text-align: center; }
.tar { text-align: right; }

.vat { vertical-align: top; }
.vam { vertical-align: middle; }
.vab { vertical-align: bottom; }

.wsnw { white-space: nowrap; }

.b-none {bottom: 0;}
.l-none {left: 0}

.pa { position: absolute; }
.pf { position: fixed; }
.pr { position: relative; }
.ps { position: static; }

/* z-index resets */
.zir-1 { position: relative; z-index: 1; }
.zir-2 { position: relative; z-index: 2; }
.zir-3 { position: relative; z-index: 3; }
.zir-4 { position: relative; z-index: 4; }

.ma { margin: auto; }

.hvs { border-right: 1px #CCCCCC solid; }
.hbs { border-bottom: 1px #CCCCCC solid; }
.h24 { height:24px }
.h30 {height:30px}

.oh { overflow: hidden; }
.oa { overflow: auto; }
.ov { overflow: visible; }


.content-centered {
  position: relative;
  margin-top: 58px;
  width: 100%;
}

.full-width {
  width: 100%;
}

.half-width {
  width: 50%;
}

.fifth-width {
  width: 20%;
}

.full-max-width {
  max-width: 100%;
}

.mh-500 {
  min-height: 500px;
}
.brm { border-radius: 10px; }

.brs { border-radius: $border-radius-small; }

.back-to-top {
  position: fixed;
  bottom: 2em;
  right: 0px;
  text-decoration: none;
  color: #ffffff;
  background-color: rgba(160, 160, 160, 0.80);
  font-size: 16px;
  padding: 1em;
  display: none;
  border-radius: 4px 0 0 4px;
  z-index: 10;
}

.back-to-top:hover {
  background-color: rgba(135, 135, 135, 1.00);
  color: #CCCCCC;
  text-decoration: none;
}

@media only screen and (max-width: 990px) {
  .content-centered {
    margin-top: 0;
  }
//remove bottom padding from browse schools module
  .pb35 {padding-bottom: 0}
}

@media only screen and (max-width: 768px) {
  //default  mobile module padding
  .dvp {padding-top: 40px; padding-bottom: 40px}
}

@media only screen and (max-width: 480px) {
  .xs-nav-stacked li { width: 100%; margin-top: 5px; }
  .mobile-clearfix {
    @include clearfix();
  }
//  .pl35-or-25 {padding-left: 25px}
}

@media only screen and (min-width:480px) {
  .rating-header-h24 { height:24px; }
}

@media (min-width:1200px){
  .plm-mobile {padding-left: 10px}
  .mobile_img {width: 300px; height: 178px;}
}

// Hub or City Hub Upcoming Event Mobile Spacing

@media only screen and (max-width: 650px) {
  .upcoming-event {
    clear: left;
    margin-left: 5px;
    margin-bottom: 10px;
  }

  .community-partner-row div {
    clear: left;
  }
}

//Lines and Borders

.search-result-border {
  border: 1px solid #e6e6e6;
  border-radius: 4px;
}

.search-result-border.emphasis-border {
  border-color: $neutral-color;
}
.search-result-border:hover{
  border: 1px solid $brand-primary;
}

.gray-border {
  border: 1px solid #e6e6e6;
  border-radius: 4px;
}

hr.brand-bar {
  height: 2px;
  background: $brand-secondary;
}

// vertical divider - used on overview
.vdl{
  padding-bottom: -10px;
  margin-bottom: -10px;
  border-left: 1px solid #DDDDDD;
}

.vdr{
  padding-bottom: -10px;
  margin-bottom: -10px;
  border-right: 1px solid #DDDDDD;
}


@media (max-width:990px){
  .vdr{
    border-right: none;
  }
}
@media (max-width:767px){
  .vdl{
    border-left: none;
  }
  .hdp{
    border-top: 1px solid #DDDDDD;
    padding-top: 30px;
    margin-top: 20px;
  }
}

